--- a/Portal/header.html
+++ b/Portal/header.html
@@ -34,7 +34,7 @@
 	}
 	#headline{
 		padding:0px;
-		background: url("{!#HOSTED_FILE.1759107}") no-repeat center center fixed; 
+		background: url("{!#HOSTED_FILE.1759107}") no-repeat center -175px fixed; 
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
 		-o-background-size: cover;
@@ -93,16 +93,26 @@
 	#txtuname, #txtpass{
 		padding: 8px;
 		width: 225px;
-		background: rgb(192,192,192);
+		background: rgb(214,214,214);
 		border: none;
-		color: rgb(255,255,255);
+		color: rgb(66,66,66);
+		box-shadow: 0px 0px 2px 3px rgba(88,88,88,0.3);
+		-o-box-shadow: 0px 0px 2px 3px rgba(88,88,88,0.3);
+		-ms-box-shadow: 0px 0px 2px 3px rgba(88,88,88,0.3);
+		-moz-box-shadow: 0px 0px 2px 3px rgba(88,88,88,0.3);
+		-webkit-box-shadow: 0px 0px 2px 3px rgba(88,88,88,0.3);
+		border-radius: 4px;
+		-o-border-radius: 4px;
+		-ms-border-radius: 4px;
+		-moz-border-radius: 4px;
+		-webkit-border-radius: 4px;
 	}
 	.btn.btn-default{
 		padding: 8px;
 		width: 150px;
 	}
 	input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
-	  color: rgb(252,252,252);
+	  color: rgb(152,152,152);
 	}
 	</style>
 	<script>
